--- a/CasaEscuela.AppWebMVC/Views/Usuario/Login.cshtml
+++ b/CasaEscuela.AppWebMVC/Views/Usuario/Login.cshtml
@@ -190,8 +190,8 @@
             <div class="col-lg-6 brand-panel">
                 <div class="brand-header brand-content">
                     <div class="d-flex align-items-center gap-3">
-                        <img src="~/img/logoBendicion.png" alt="Logo" style="height: 40px; width: auto; filter: brightness(0) invert(1);" />
-                        <span class="h5 mb-0 fw-bold tracking-tight">Casa Escuela</span>
+                        <img src="~/img/logoCasaEscuela.png" alt="Logo" style="max-height: 350px; width: auto; position: relative; top: -75px; margin-left: -60px;" />
+                        @* <span class="h5 mb-0 fw-bold tracking-tight">Casa Escuela</span> *@
                     </div>
                 </div>
 
